--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   margin-left: 10px;
   background-color: #003049;
   border: 2px solid #003049;
-  border-radius: 3px;
+  /* border-radius: 3px; */
   color: #fff;
   cursor: pointer;
 }
@@ -40,4 +40,21 @@
   margin-left: 8px;
   border-radius: 5px;
   border: 2px solid #003049;
+}
+@media screen and (max-width: 700px) {
+  .app_input {
+    padding: 6px 18px;
+    width: 30%;
+    font-size: 15px;
+  }
+  .app_labels {
+    margin-top: 10px;
+  }
+  .app_recipes {
+    margin-left: 20px;
+    margin-top: 25px;
+    display: grid;
+    grid-template-columns: 180px 180px;
+    align-items: baseline;
+  }
 }
