--- a/src/App.css
+++ b/src/App.css
@@ -44,11 +44,13 @@
 @media screen and (max-width: 700px) {
   .app_input {
     padding: 6px 18px;
+    margin-left: 50px;
     width: 30%;
     font-size: 15px;
   }
   .app_labels {
     margin-top: 10px;
+    margin-left: 150px;
   }
   .app_recipes {
     margin-left: 20px;
