--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   .app_input {
     padding: 6px 18px;
     margin-left: 30px;
-    width: 30%;
+    min-width: 200px;
     font-size: 15px;
   }
   .app_labels {
@@ -53,7 +53,8 @@
     margin-left: 30px;
   }
   .app_recipes {
-    margin-left: 20px;
+    margin-left: 15px;
+    margin-right: 15px;
     margin-top: 25px;
     display: grid;
     grid-template-columns: 180px 180px;
@@ -61,5 +62,6 @@
   }
   .app_search {
     margin-left: 30px;
+    /* width: 25%; */
   }
 }
